hotfix:Update CORS configuration for allowed origins and methods